--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build":"npm i",
+    "build": "npm i",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
-
   },
   "keywords": [],
   "author": "",
@@ -19,6 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "jwt-token": "^1.0.9",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.2.4",
     "nodemon": "^2.0.22"
   }
